--- a/lambda_learning_RNN_relu.ipynb
+++ b/lambda_learning_RNN_relu.ipynb
@@ -97,7 +97,84 @@
       "Epoch    14, Loss_1: 4429.1123, Loss_1_test: 4387.9126, Loss_2: 5703.1870, Loss_2_test: 5753.5811\n",
       "Epoch    15, Loss_1: 4114.6567, Loss_1_test: 4075.6992, Loss_2: 5447.1875, Loss_2_test: 5495.8188\n",
       "Epoch    16, Loss_1: 3808.9233, Loss_1_test: 3772.1716, Loss_2: 5195.2173, Loss_2_test: 5242.1025\n",
-      "Epoch    17, Loss_1: 3512.4751, Loss_1_test: 3477.8904, Loss_2: 4947.3906, Loss_2_test: 4992.5459\n"
+      "Epoch    17, Loss_1: 3512.4751, Loss_1_test: 3477.8904, Loss_2: 4947.3906, Loss_2_test: 4992.5459\n",
+      "Epoch    18, Loss_1: 3225.8472, Loss_1_test: 3193.3867, Loss_2: 4703.7056, Loss_2_test: 4747.1465\n",
+      "Epoch    19, Loss_1: 2948.5579, Loss_1_test: 2918.1848, Loss_2: 4464.1787, Loss_2_test: 4505.9214\n",
+      "Epoch    20, Loss_1: 2681.8208, Loss_1_test: 2653.4890, Loss_2: 4229.1792, Loss_2_test: 4269.2417\n",
+      "Epoch    21, Loss_1: 2425.8389, Loss_1_test: 2399.5017, Loss_2: 3999.0256, Loss_2_test: 4037.4285\n",
+      "Epoch    22, Loss_1: 2180.5642, Loss_1_test: 2156.1765, Loss_2: 3773.8447, Loss_2_test: 3810.6094\n",
+      "Epoch    23, Loss_1: 1945.9067, Loss_1_test: 1923.4253, Loss_2: 3553.7490, Loss_2_test: 3588.8953\n",
+      "Epoch    24, Loss_1: 1722.7709, Loss_1_test: 1702.1454, Loss_2: 3338.8826, Loss_2_test: 3372.4333\n",
+      "Epoch    25, Loss_1: 1511.8518, Loss_1_test: 1493.0284, Loss_2: 3129.4529, Loss_2_test: 3161.4309\n",
+      "Epoch    26, Loss_1: 1313.5687, Loss_1_test: 1296.4907, Loss_2: 2925.7336, Loss_2_test: 2956.1641\n",
+      "Epoch    27, Loss_1: 1128.3423, Loss_1_test: 1112.9498, Loss_2: 2727.6428, Loss_2_test: 2756.5496\n",
+      "Epoch    28, Loss_1: 956.8209, Loss_1_test: 943.0492, Loss_2: 2535.5217, Loss_2_test: 2562.9316\n",
+      "Epoch    29, Loss_1: 799.4832, Loss_1_test: 787.2629, Loss_2: 2349.6509, Loss_2_test: 2375.5916\n",
+      "Epoch    30, Loss_1: 656.6526, Loss_1_test: 645.9111, Loss_2: 2170.0098, Loss_2_test: 2194.5090\n",
+      "Epoch    31, Loss_1: 528.4169, Loss_1_test: 519.0795, Loss_2: 1996.8470, Loss_2_test: 2019.9349\n",
+      "Epoch    32, Loss_1: 415.0821, Loss_1_test: 407.0694, Loss_2: 1830.5425, Loss_2_test: 1852.2506\n",
+      "Epoch    33, Loss_1: 316.6838, Loss_1_test: 309.9127, Loss_2: 1671.1920, Loss_2_test: 1691.5537\n",
+      "Epoch    34, Loss_1: 232.9464, Loss_1_test: 227.3323, Loss_2: 1519.0493, Loss_2_test: 1538.0996\n",
+      "Epoch    35, Loss_1: 163.4632, Loss_1_test: 158.9207, Loss_2: 1373.9418, Loss_2_test: 1391.7142\n",
+      "Epoch    36, Loss_1: 107.6908, Loss_1_test: 104.1330, Loss_2: 1236.0873, Loss_2_test: 1252.6171\n",
+      "Epoch    37, Loss_1:  64.8460, Loss_1_test:  62.1864, Loss_2: 1105.7589, Loss_2_test: 1121.0839\n",
+      "Epoch    38, Loss_1:  33.9700, Loss_1_test:  32.1223, Loss_2: 983.0685, Loss_2_test: 997.2279\n",
+      "Epoch    39, Loss_1:  13.8727, Loss_1_test:  12.7532, Loss_2: 867.8307, Loss_2_test: 880.8621\n",
+      "Epoch    40, Loss_1:   3.3418, Loss_1_test:   2.9027, Loss_2: 760.0673, Loss_2_test: 772.0090\n",
+      "Epoch    41, Loss_1:   1.3195, Loss_1_test:   2.0936, Loss_2: 660.1610, Loss_2_test: 671.0552\n",
+      "Epoch    42, Loss_1:   4.1558, Loss_1_test:   7.6689, Loss_2: 567.9767, Loss_2_test: 577.8657\n",
+      "Epoch    43, Loss_1:   9.3752, Loss_1_test:  16.8179, Loss_2: 483.3128, Loss_2_test: 492.2372\n",
+      "Epoch    44, Loss_1:  15.9640, Loss_1_test:  28.2090, Loss_2: 406.0714, Loss_2_test: 414.0718\n",
+      "Epoch    45, Loss_1:  23.3473, Loss_1_test:  40.8770, Loss_2: 336.2674, Loss_2_test: 343.3860\n",
+      "Epoch    46, Loss_1:  31.0288, Loss_1_test:  53.9969, Loss_2: 273.8223, Loss_2_test: 280.1019\n",
+      "Epoch    47, Loss_1:  38.5826, Loss_1_test:  66.8601, Loss_2: 218.6773, Loss_2_test: 224.1627\n",
+      "Epoch    48, Loss_1:  45.6593, Loss_1_test:  78.8861, Loss_2: 170.4836, Loss_2_test: 175.2171\n",
+      "Epoch    49, Loss_1:  51.9885, Loss_1_test:  89.6260, Loss_2: 129.0259, Loss_2_test: 133.0500\n",
+      "Epoch    50, Loss_1:  57.3706, Loss_1_test:  98.7494, Loss_2:  93.9316, Loss_2_test:  97.2863\n",
+      "Epoch    51, Loss_1:  61.6767, Loss_1_test: 106.0432, Loss_2:  65.0148, Loss_2_test:  67.7414\n",
+      "Epoch    52, Loss_1:  64.8364, Loss_1_test: 111.3925, Loss_2:  42.0269, Loss_2_test:  44.1677\n",
+      "Epoch    53, Loss_1:  66.8352, Loss_1_test: 114.7753, Loss_2:  24.5361, Loss_2_test:  26.1318\n",
+      "Epoch    54, Loss_1:  67.7058, Loss_1_test: 116.2485, Loss_2:  12.1844, Loss_2_test:  13.2765\n",
+      "Epoch    55, Loss_1:  67.5187, Loss_1_test: 115.9318, Loss_2:   4.5276, Loss_2_test:   5.1624\n",
+      "Epoch    56, Loss_1:  66.3720, Loss_1_test: 113.9914, Loss_2:   1.6178, Loss_2_test:   1.5735\n",
+      "Epoch    57, Loss_1:  64.3841, Loss_1_test: 110.6269, Loss_2:   2.5674, Loss_2_test:   1.5018\n",
+      "Epoch    58, Loss_1:  61.6830, Loss_1_test: 106.0538, Loss_2:   6.3029, Loss_2_test:   3.4001\n",
+      "Epoch    59, Loss_1:  58.4068, Loss_1_test: 100.5049, Loss_2:  11.4286, Loss_2_test:   6.2892\n",
+      "Epoch    60, Loss_1:  54.6883, Loss_1_test:  94.2035, Loss_2:  17.1532, Loss_2_test:   9.5680\n",
+      "Epoch    61, Loss_1:  50.6544, Loss_1_test:  87.3633, Loss_2:  22.8191, Loss_2_test:  12.8382\n",
+      "Epoch    62, Loss_1:  46.4263, Loss_1_test:  80.1884, Loss_2:  27.8929, Loss_2_test:  15.7804\n",
+      "Epoch    63, Loss_1:  42.1146, Loss_1_test:  72.8649, Loss_2:  31.9926, Loss_2_test:  18.1646\n",
+      "Epoch    64, Loss_1:  37.8224, Loss_1_test:  65.5669, Loss_2:  34.9114, Loss_2_test:  19.8652\n",
+      "Epoch    65, Loss_1:  33.6263, Loss_1_test:  58.4237, Loss_2:  36.5880, Loss_2_test:  20.8430\n",
+      "Epoch    66, Loss_1:  29.5910, Loss_1_test:  51.5446, Loss_2:  37.0938, Loss_2_test:  21.1381\n",
+      "Epoch    67, Loss_1:  25.7720, Loss_1_test:  45.0237, Loss_2:  36.5666, Loss_2_test:  20.8305\n",
+      "Epoch    68, Loss_1:  22.2090, Loss_1_test:  38.9283, Loss_2:  35.1762, Loss_2_test:  20.0195\n",
+      "Epoch    69, Loss_1:  18.9269, Loss_1_test:  33.3014, Loss_2:  33.1298, Loss_2_test:  18.8269\n",
+      "Epoch    70, Loss_1:  15.9449, Loss_1_test:  28.1761, Loss_2:  30.6485, Loss_2_test:  17.3823\n",
+      "Epoch    71, Loss_1:  13.2696, Loss_1_test:  23.5641, Loss_2:  27.9153, Loss_2_test:  15.7934\n",
+      "Epoch    72, Loss_1:  10.8992, Loss_1_test:  19.4637, Loss_2:  25.0721, Loss_2_test:  14.1434\n",
+      "Epoch    73, Loss_1:   8.8272, Loss_1_test:  15.8644, Loss_2:  22.2017, Loss_2_test:  12.4810\n",
+      "Epoch    74, Loss_1:   7.0402, Loss_1_test:  12.7449, Loss_2:  19.3972, Loss_2_test:  10.8609\n",
+      "Epoch    75, Loss_1:   5.5213, Loss_1_test:  10.0789, Loss_2:  16.7433, Loss_2_test:   9.3322\n",
+      "Epoch    76, Loss_1:   4.2512, Loss_1_test:   7.8379, Loss_2:  14.2828, Loss_2_test:   7.9200\n",
+      "Epoch    77, Loss_1:   3.2249, Loss_1_test:   5.9843, Loss_2:  12.0249, Loss_2_test:   6.6291\n",
+      "Epoch    78, Loss_1:   2.4299, Loss_1_test:   4.4965, Loss_2:   9.9814, Loss_2_test:   5.4658\n",
+      "Epoch    79, Loss_1:   1.8535, Loss_1_test:   3.3412, Loss_2:   8.1792, Loss_2_test:   4.4439\n",
+      "Epoch    80, Loss_1:   1.4614, Loss_1_test:   2.4769, Loss_2:   6.6126, Loss_2_test:   3.5709\n",
+      "Epoch    81, Loss_1:   1.2608, Loss_1_test:   1.9207, Loss_2:   5.2847, Loss_2_test:   2.8454\n",
+      "Epoch    82, Loss_1:   1.1983, Loss_1_test:   1.6085, Loss_2:   4.1820, Loss_2_test:   2.2651\n",
+      "Epoch    83, Loss_1:   1.2766, Loss_1_test:   1.5130, Loss_2:   3.2866, Loss_2_test:   1.8285\n",
+      "Epoch    84, Loss_1:   1.4461, Loss_1_test:   1.5499, Loss_2:   2.5802, Loss_2_test:   1.5075\n",
+      "Epoch    85, Loss_1:   1.6835, Loss_1_test:   1.6792, Loss_2:   2.0829, Loss_2_test:   1.3157\n",
+      "Epoch    86, Loss_1:   1.9291, Loss_1_test:   1.8223, Loss_2:   1.7165, Loss_2_test:   1.1981\n",
+      "Epoch    87, Loss_1:   2.2144, Loss_1_test:   2.0318, Loss_2:   1.5715, Loss_2_test:   1.2146\n",
+      "Epoch    88, Loss_1:   2.4636, Loss_1_test:   2.2162, Loss_2:   1.5079, Loss_2_test:   1.2875\n",
+      "Epoch    89, Loss_1:   2.6614, Loss_1_test:   2.3628, Loss_2:   1.5384, Loss_2_test:   1.4238\n",
+      "Epoch    90, Loss_1:   2.7999, Loss_1_test:   2.4656, Loss_2:   1.6371, Loss_2_test:   1.6085\n",
+      "Epoch    91, Loss_1:   2.8760, Loss_1_test:   2.5220, Loss_2:   1.7468, Loss_2_test:   1.8010\n",
+      "Epoch    92, Loss_1:   2.8910, Loss_1_test:   2.5332, Loss_2:   1.8767, Loss_2_test:   2.0042\n",
+      "Epoch    93, Loss_1:   2.8494, Loss_1_test:   2.5023, Loss_2:   2.0361, Loss_2_test:   2.2202\n",
+      "Epoch    94, Loss_1:   2.7586, Loss_1_test:   2.4349, Loss_2:   2.1771, Loss_2_test:   2.4108\n"
      ]
     }
    ],
