--- a/lambda_learning_DeepLearning.ipynb
+++ b/lambda_learning_DeepLearning.ipynb
@@ -113,8 +113,8 @@
     "model2 = MyModel(input_size = data.shape[1])\n",
     "\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001)\n",
-    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001)\n",
+    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001, amsgrad=True)\n",
+    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001, amsgrad=True)\n",
     "\n",
     "# Training loop\n",
     "record_loss1_test = []\n",
