--- a/lambda_learning_linear_GD.ipynb
+++ b/lambda_learning_linear_GD.ipynb
@@ -98,8 +98,8 @@
     "model2 = LinearModel(input_size = 1)\n",
     "\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer1 = optim.Adam(model1.parameters(), lr=0.01)\n",
-    "optimizer2 = optim.Adam(model2.parameters(), lr=0.01)\n",
+    "optimizer1 = optim.Adam(model1.parameters(), lr=0.01, amsgrad=True)\n",
+    "optimizer2 = optim.Adam(model2.parameters(), lr=0.01, amsgrad=True)\n",
     "\n",
     "# Training loop\n",
     "record_loss1_test = []\n",
