--- a/lambda_learning_RNN_relu.ipynb
+++ b/lambda_learning_RNN_relu.ipynb
@@ -418,7 +418,84 @@
       "Epoch   335, Loss_1:   1.1866, Loss_1_test:   1.6730, Loss_2:   1.4946, Loss_2_test:   1.3349\n",
       "Epoch   336, Loss_1:   1.1866, Loss_1_test:   1.6722, Loss_2:   1.4946, Loss_2_test:   1.3342\n",
       "Epoch   337, Loss_1:   1.1866, Loss_1_test:   1.6720, Loss_2:   1.4946, Loss_2_test:   1.3343\n",
-      "Epoch   338, Loss_1:   1.1866, Loss_1_test:   1.6722, Loss_2:   1.4947, Loss_2_test:   1.3350\n"
+      "Epoch   338, Loss_1:   1.1866, Loss_1_test:   1.6722, Loss_2:   1.4947, Loss_2_test:   1.3350\n",
+      "Epoch   339, Loss_1:   1.1866, Loss_1_test:   1.6730, Loss_2:   1.4949, Loss_2_test:   1.3328\n",
+      "Epoch   340, Loss_1:   1.1865, Loss_1_test:   1.6741, Loss_2:   1.4951, Loss_2_test:   1.3316\n",
+      "Epoch   341, Loss_1:   1.1868, Loss_1_test:   1.6764, Loss_2:   1.4952, Loss_2_test:   1.3311\n",
+      "Epoch   342, Loss_1:   1.1866, Loss_1_test:   1.6732, Loss_2:   1.4952, Loss_2_test:   1.3313\n",
+      "Epoch   343, Loss_1:   1.1867, Loss_1_test:   1.6714, Loss_2:   1.4950, Loss_2_test:   1.3321\n",
+      "Epoch   344, Loss_1:   1.1868, Loss_1_test:   1.6704, Loss_2:   1.4948, Loss_2_test:   1.3334\n",
+      "Epoch   345, Loss_1:   1.1868, Loss_1_test:   1.6700, Loss_2:   1.4949, Loss_2_test:   1.3354\n",
+      "Epoch   346, Loss_1:   1.1868, Loss_1_test:   1.6701, Loss_2:   1.4947, Loss_2_test:   1.3341\n",
+      "Epoch   347, Loss_1:   1.1867, Loss_1_test:   1.6708, Loss_2:   1.4947, Loss_2_test:   1.3338\n",
+      "Epoch   348, Loss_1:   1.1866, Loss_1_test:   1.6720, Loss_2:   1.4947, Loss_2_test:   1.3341\n",
+      "Epoch   349, Loss_1:   1.1865, Loss_1_test:   1.6735, Loss_2:   1.4947, Loss_2_test:   1.3351\n",
+      "Epoch   350, Loss_1:   1.1867, Loss_1_test:   1.6759, Loss_2:   1.4948, Loss_2_test:   1.3331\n",
+      "Epoch   351, Loss_1:   1.1866, Loss_1_test:   1.6732, Loss_2:   1.4950, Loss_2_test:   1.3321\n",
+      "Epoch   352, Loss_1:   1.1867, Loss_1_test:   1.6717, Loss_2:   1.4951, Loss_2_test:   1.3317\n",
+      "Epoch   353, Loss_1:   1.1867, Loss_1_test:   1.6709, Loss_2:   1.4950, Loss_2_test:   1.3320\n",
+      "Epoch   354, Loss_1:   1.1867, Loss_1_test:   1.6707, Loss_2:   1.4949, Loss_2_test:   1.3329\n",
+      "Epoch   355, Loss_1:   1.1867, Loss_1_test:   1.6710, Loss_2:   1.4946, Loss_2_test:   1.3344\n",
+      "Epoch   356, Loss_1:   1.1867, Loss_1_test:   1.6719, Loss_2:   1.4957, Loss_2_test:   1.3372\n",
+      "Epoch   357, Loss_1:   1.1866, Loss_1_test:   1.6732, Loss_2:   1.4950, Loss_2_test:   1.3356\n",
+      "Epoch   358, Loss_1:   1.1864, Loss_1_test:   1.6749, Loss_2:   1.4951, Loss_2_test:   1.3317\n",
+      "Epoch   359, Loss_1:   1.1875, Loss_1_test:   1.6788, Loss_2:   1.4955, Loss_2_test:   1.3292\n",
+      "Epoch   360, Loss_1:   1.1865, Loss_1_test:   1.6746, Loss_2:   1.4959, Loss_2_test:   1.3275\n",
+      "Epoch   361, Loss_1:   1.1866, Loss_1_test:   1.6731, Loss_2:   1.4960, Loss_2_test:   1.3267\n",
+      "Epoch   362, Loss_1:   1.1866, Loss_1_test:   1.6722, Loss_2:   1.4960, Loss_2_test:   1.3267\n",
+      "Epoch   363, Loss_1:   1.1866, Loss_1_test:   1.6720, Loss_2:   1.4959, Loss_2_test:   1.3274\n",
+      "Epoch   364, Loss_1:   1.1866, Loss_1_test:   1.6722, Loss_2:   1.4956, Loss_2_test:   1.3287\n",
+      "Epoch   365, Loss_1:   1.1866, Loss_1_test:   1.6730, Loss_2:   1.4953, Loss_2_test:   1.3305\n",
+      "Epoch   366, Loss_1:   1.1865, Loss_1_test:   1.6742, Loss_2:   1.4949, Loss_2_test:   1.3328\n",
+      "Epoch   367, Loss_1:   1.1869, Loss_1_test:   1.6767, Loss_2:   1.4952, Loss_2_test:   1.3360\n",
+      "Epoch   368, Loss_1:   1.1866, Loss_1_test:   1.6732, Loss_2:   1.4950, Loss_2_test:   1.3356\n",
+      "Epoch   369, Loss_1:   1.1867, Loss_1_test:   1.6714, Loss_2:   1.4950, Loss_2_test:   1.3323\n",
+      "Epoch   370, Loss_1:   1.1868, Loss_1_test:   1.6703, Loss_2:   1.4953, Loss_2_test:   1.3303\n",
+      "Epoch   371, Loss_1:   1.1868, Loss_1_test:   1.6698, Loss_2:   1.4956, Loss_2_test:   1.3291\n",
+      "Epoch   372, Loss_1:   1.1868, Loss_1_test:   1.6700, Loss_2:   1.4956, Loss_2_test:   1.3288\n",
+      "Epoch   373, Loss_1:   1.1867, Loss_1_test:   1.6707, Loss_2:   1.4956, Loss_2_test:   1.3291\n",
+      "Epoch   374, Loss_1:   1.1866, Loss_1_test:   1.6719, Loss_2:   1.4954, Loss_2_test:   1.3301\n",
+      "Epoch   375, Loss_1:   1.1865, Loss_1_test:   1.6736, Loss_2:   1.4951, Loss_2_test:   1.3316\n",
+      "Epoch   376, Loss_1:   1.1868, Loss_1_test:   1.6762, Loss_2:   1.4947, Loss_2_test:   1.3337\n",
+      "Epoch   377, Loss_1:   1.1866, Loss_1_test:   1.6732, Loss_2:   1.4957, Loss_2_test:   1.3371\n",
+      "Epoch   378, Loss_1:   1.1867, Loss_1_test:   1.6717, Loss_2:   1.4952, Loss_2_test:   1.3362\n",
+      "Epoch   379, Loss_1:   1.1867, Loss_1_test:   1.6708, Loss_2:   1.4950, Loss_2_test:   1.3324\n",
+      "Epoch   380, Loss_1:   1.1867, Loss_1_test:   1.6706, Loss_2:   1.4954, Loss_2_test:   1.3301\n",
+      "Epoch   381, Loss_1:   1.1867, Loss_1_test:   1.6710, Loss_2:   1.4956, Loss_2_test:   1.3287\n",
+      "Epoch   382, Loss_1:   1.1867, Loss_1_test:   1.6719, Loss_2:   1.4957, Loss_2_test:   1.3282\n",
+      "Epoch   383, Loss_1:   1.1866, Loss_1_test:   1.6732, Loss_2:   1.4957, Loss_2_test:   1.3284\n",
+      "Epoch   384, Loss_1:   1.1865, Loss_1_test:   1.6750, Loss_2:   1.4955, Loss_2_test:   1.3293\n",
+      "Epoch   385, Loss_1:   1.1866, Loss_1_test:   1.6724, Loss_2:   1.4952, Loss_2_test:   1.3308\n",
+      "Epoch   386, Loss_1:   1.1867, Loss_1_test:   1.6707, Loss_2:   1.4949, Loss_2_test:   1.3328\n",
+      "Epoch   387, Loss_1:   1.1868, Loss_1_test:   1.6696, Loss_2:   1.4949, Loss_2_test:   1.3355\n",
+      "Epoch   388, Loss_1:   1.1869, Loss_1_test:   1.6693, Loss_2:   1.4946, Loss_2_test:   1.3347\n",
+      "Epoch   389, Loss_1:   1.1868, Loss_1_test:   1.6696, Loss_2:   1.4946, Loss_2_test:   1.3348\n",
+      "Epoch   390, Loss_1:   1.1868, Loss_1_test:   1.6705, Loss_2:   1.4950, Loss_2_test:   1.3320\n",
+      "Epoch   391, Loss_1:   1.1867, Loss_1_test:   1.6718, Loss_2:   1.4953, Loss_2_test:   1.3302\n",
+      "Epoch   392, Loss_1:   1.1865, Loss_1_test:   1.6736, Loss_2:   1.4955, Loss_2_test:   1.3293\n",
+      "Epoch   393, Loss_1:   1.1869, Loss_1_test:   1.6765, Loss_2:   1.4955, Loss_2_test:   1.3292\n",
+      "Epoch   394, Loss_1:   1.1865, Loss_1_test:   1.6734, Loss_2:   1.4954, Loss_2_test:   1.3298\n",
+      "Epoch   395, Loss_1:   1.1867, Loss_1_test:   1.6719, Loss_2:   1.4952, Loss_2_test:   1.3310\n",
+      "Epoch   396, Loss_1:   1.1867, Loss_1_test:   1.6711, Loss_2:   1.4949, Loss_2_test:   1.3327\n",
+      "Epoch   397, Loss_1:   1.1867, Loss_1_test:   1.6709, Loss_2:   1.4948, Loss_2_test:   1.3352\n",
+      "Epoch   398, Loss_1:   1.1867, Loss_1_test:   1.6713, Loss_2:   1.4946, Loss_2_test:   1.3342\n",
+      "Epoch   399, Loss_1:   1.1866, Loss_1_test:   1.6723, Loss_2:   1.4947, Loss_2_test:   1.3341\n",
+      "Epoch   400, Loss_1:   1.1865, Loss_1_test:   1.6737, Loss_2:   1.4946, Loss_2_test:   1.3347\n",
+      "Epoch   401, Loss_1:   1.1867, Loss_1_test:   1.6760, Loss_2:   1.4954, Loss_2_test:   1.3365\n",
+      "Epoch   402, Loss_1:   1.1866, Loss_1_test:   1.6728, Loss_2:   1.4947, Loss_2_test:   1.3340\n",
+      "Epoch   403, Loss_1:   1.1867, Loss_1_test:   1.6710, Loss_2:   1.4949, Loss_2_test:   1.3329\n",
+      "Epoch   404, Loss_1:   1.1868, Loss_1_test:   1.6700, Loss_2:   1.4949, Loss_2_test:   1.3327\n",
+      "Epoch   405, Loss_1:   1.1868, Loss_1_test:   1.6696, Loss_2:   1.4948, Loss_2_test:   1.3331\n",
+      "Epoch   406, Loss_1:   1.1868, Loss_1_test:   1.6699, Loss_2:   1.4946, Loss_2_test:   1.3342\n",
+      "Epoch   407, Loss_1:   1.1867, Loss_1_test:   1.6707, Loss_2:   1.4953, Loss_2_test:   1.3364\n",
+      "Epoch   408, Loss_1:   1.1866, Loss_1_test:   1.6721, Loss_2:   1.4946, Loss_2_test:   1.3343\n",
+      "Epoch   409, Loss_1:   1.1865, Loss_1_test:   1.6739, Loss_2:   1.4947, Loss_2_test:   1.3337\n",
+      "Epoch   410, Loss_1:   1.1870, Loss_1_test:   1.6771, Loss_2:   1.4947, Loss_2_test:   1.3337\n",
+      "Epoch   411, Loss_1:   1.1865, Loss_1_test:   1.6737, Loss_2:   1.4946, Loss_2_test:   1.3344\n",
+      "Epoch   412, Loss_1:   1.1866, Loss_1_test:   1.6720, Loss_2:   1.4953, Loss_2_test:   1.3363\n",
+      "Epoch   413, Loss_1:   1.1867, Loss_1_test:   1.6712, Loss_2:   1.4947, Loss_2_test:   1.3340\n",
+      "Epoch   414, Loss_1:   1.1867, Loss_1_test:   1.6710, Loss_2:   1.4948, Loss_2_test:   1.3330\n",
+      "Epoch   415, Loss_1:   1.1867, Loss_1_test:   1.6714, Loss_2:   1.4949, Loss_2_test:   1.3329\n"
      ]
     }
    ],
@@ -428,8 +505,8 @@
     "model2 = RNNModel()\n",
     "\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
-    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001)\n",
-    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001)\n",
+    "optimizer1 = optim.Adam(model1.parameters(), lr=0.001, amsgrad=True)\n",
+    "optimizer2 = optim.Adam(model2.parameters(), lr=0.001, amsgrad=True)\n",
     "\n",
     "# Training loop\n",
     "record_loss1_test = []\n",
