--- a/lambda_learning_RNN_tanh.ipynb
+++ b/lambda_learning_RNN_tanh.ipynb
@@ -498,7 +498,9 @@
       "Epoch   415, Loss_1:   1.1866, Loss_1_test:   1.6721, Loss_2:   1.4954, Loss_2_test:   1.3298\n",
       "Epoch   416, Loss_1:   1.1865, Loss_1_test:   1.6735, Loss_2:   1.4952, Loss_2_test:   1.3310\n",
       "Epoch   417, Loss_1:   1.1866, Loss_1_test:   1.6755, Loss_2:   1.4949, Loss_2_test:   1.3326\n",
-      "Epoch   418, Loss_1:   1.1866, Loss_1_test:   1.6727, Loss_2:   1.4946, Loss_2_test:   1.3346\n"
+      "Epoch   418, Loss_1:   1.1866, Loss_1_test:   1.6727, Loss_2:   1.4946, Loss_2_test:   1.3346\n",
+      "Epoch   419, Loss_1:   1.1867, Loss_1_test:   1.6709, Loss_2:   1.4962, Loss_2_test:   1.3382\n",
+      "Epoch   420, Loss_1:   1.1868, Loss_1_test:   1.6699, Loss_2:   1.4960, Loss_2_test:   1.3378\n"
      ]
     }
    ],
