--- a/lambda_learning_BIC.ipynb
+++ b/lambda_learning_BIC.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/labels.gz')\n",
+    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "header = ['sequenceID', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_errs', 'fold_2_errs']\n",
     "\n",
@@ -55,7 +55,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/BIC.csv', header, row)"
+    "    write_to_csv('1.genome_learning_output/BIC_2.csv', header, row)"
    ]
   }
  ],
