--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -152,6 +152,7 @@
     "    _y = y[end+1] - y[start]\n",
     "    _z = z[end+1] - z[start]\n",
     "    return _z - np.square(_y)/(end-start+1)\n",
+    "    \n",
     "\n",
     "# # test\n",
     "# y, z = get_cumsum(toy_sequence)\n",
@@ -201,9 +202,9 @@
     "            fp_count += 1\n",
     "\n",
     "    for s, e in zip(pos_start, pos_end):\n",
-    "        if(count_items_between(chpnt, s, e) > 1):       # number of change is greater than 1 in positive labels\n",
-    "            fp_count += 1\n",
-    "        elif(count_items_between(chpnt, s, e) == 0):    # number of change is 0 in positive labels\n",
+    "        # if(count_items_between(chpnt, s, e) > 1):       # number of change is greater than 1 in positive labels\n",
+    "        #     fp_count += 1\n",
+    "        if(count_items_between(chpnt, s, e) == 0):    # number of change is 0 in positive labels\n",
     "            fn_count += 1\n",
     "\n",
     "    return fp_count, fn_count\n",
@@ -216,7 +217,8 @@
     "# print(\"pos end:   \", pos_end)\n",
     "\n",
     "# chpnt = [0, 3, 5, 6, 9, 10]\n",
-    "# print(chpnt, \"   :\", error_count(chpnt, neg_start, neg_end, pos_start, pos_end))\n",
+    "# print(chpnt, \"   :\", \n",
+    "# (chpnt, neg_start, neg_end, pos_start, pos_end))\n",
     "\n",
     "# chpnt = [0, 1, 2, 6, 8, 9, 10]\n",
     "# print(chpnt, \":\",error_count(chpnt, neg_start, neg_end, pos_start, pos_end))"
