--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -26,8 +26,8 @@
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    # get sequences and labels\n",
-    "    seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
-    "    labels = gen_data_dict('sequence_label_data/labels.gz')\n",
+    "    seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
+    "    labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
     "\n",
     "    # lambda candidates\n",
     "    ldas = [10**element for element in [i*0.5 for i in range(-10, 11)]]\n",
@@ -38,11 +38,11 @@
     "\n",
     "        # run each lambda and record it into csv file\n",
     "        row  = [i]\n",
-    "        errs = Parallel(n_jobs=6)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "        errs = Parallel(n_jobs=32)(delayed(try_lambda)(i) for i in range(0, 21))\n",
     "        row += errs\n",
     "\n",
     "        header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
-    "        write_to_csv('learning_data/errors.csv', header, row)"
+    "        write_to_csv('1.genome_learning_data/errors.csv', header, row)"
    ]
   }
  ],
