--- a/separate_errors_each_fold.ipynb
+++ b/separate_errors_each_fold.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# Specify the path to your CSV file\n",
-    "csv_file_path = 'learning_data/errors.csv'\n",
+    "csv_file_path = '1.genome_learning_data/errors.csv'\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "df = pd.read_csv(csv_file_path)"
@@ -67,9 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1.to_csv('learning_data/errors_fold1.csv', index=False)\n",
-    "df_2.to_csv('learning_data/errors_fold2.csv', index=False)\n",
-    "df_3.to_csv('learning_data/errors_total.csv', index=False)"
+    "df_1.to_csv('1.genome_learning_data/errors_fold1.csv', index=False)\n",
+    "df_2.to_csv('1.genome_learning_data/errors_fold2.csv', index=False)\n",
+    "df_3.to_csv('1.genome_learning_data/errors_total.csv', index=False)"
    ]
   }
  ],
